--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="66ebcb">  <td>25/03/09 13:51:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Testbase.setup()[pri:0, instance:testlayer.Logintest@c33b74f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="66ebcb">  <td>25/03/09 13:51:29</td>   <td>18781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Testbase.closed()[pri:0, instance:testlayer.Logintest@c33b74f]">&lt;&lt;closed</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6461b3">  <td>25/03/09 13:51:17</td>   <td>6964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Logintest.validatelogintest()[pri:0, instance:testlayer.Logintest@c33b74f]">validatelogintest</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="66ebcb">  <td>25/03/09 13:51:11</td>   <td>145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Testbase.start()[pri:0, instance:testlayer.Logintest@c33b74f]">&gt;&gt;start</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="66ebcb">  <td>25/03/09 13:51:29</td>   <td>18787</td> <td>&nbsp;</td><td title="&lt;&lt;Testbase.close()[pri:0, instance:testlayer.Logintest@c33b74f]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="9bbd76">  <td>25/03/09 15:28:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Testbase.setup()[pri:0, instance:testlayer.Addtocarttest@243c4f91]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
+<tr bgcolor="9bbd76">  <td>25/03/09 15:29:00</td>   <td>5643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Testbase.closed()[pri:0, instance:testlayer.Addtocarttest@243c4f91]">&lt;&lt;closed</td> 
+<td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
+<tr bgcolor="9bbd76">  <td>25/03/09 15:29:00</td>   <td>5648</td> <td>&nbsp;</td><td title="&lt;&lt;Testbase.close()[pri:0, instance:testlayer.Addtocarttest@243c4f91]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
+<tr bgcolor="6aaeab">  <td>25/03/09 15:28:59</td>   <td>4966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Addtocarttest.validateaddtocarttest()[pri:0, instance:testlayer.Addtocarttest@243c4f91]">validateaddtocarttest</td> 
+  <td>main@1162918744</td>   <td></td> </tr>
+<tr bgcolor="9bbd76">  <td>25/03/09 15:28:54</td>   <td>118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Testbase.start()[pri:0, instance:testlayer.Addtocarttest@243c4f91]">&gt;&gt;start</td> 
+<td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
 </table>
