--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9bbd76">  <td>25/03/09 15:29:00</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Testbase.close()[pri:0, instance:testlayer.Addtocarttest@243c4f91]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
-<tr bgcolor="9bbd76">  <td>25/03/09 15:29:00</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Testbase.closed()[pri:0, instance:testlayer.Addtocarttest@243c4f91]">&lt;&lt;closed</td> 
-<td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
-<tr bgcolor="9bbd76">  <td>25/03/09 15:28:54</td>   <td>-5648</td> <td>&nbsp;</td><td title="&gt;&gt;Testbase.setup()[pri:0, instance:testlayer.Addtocarttest@243c4f91]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
-<tr bgcolor="9bbd76">  <td>25/03/09 15:28:54</td>   <td>-5530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Testbase.start()[pri:0, instance:testlayer.Addtocarttest@243c4f91]">&gt;&gt;start</td> 
-<td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
-<tr bgcolor="6aaeab">  <td>25/03/09 15:28:59</td>   <td>-682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Addtocarttest.validateaddtocarttest()[pri:0, instance:testlayer.Addtocarttest@243c4f91]">validateaddtocarttest</td> 
+<tr bgcolor="6aaeab">  <td>25/03/09 23:27:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePagetest.HomePagetest()[pri:0, instance:testlayer.HomePagetest@243c4f91]">HomePagetest</td> 
   <td>main@1162918744</td>   <td></td> </tr>
+<tr bgcolor="9bbd76">  <td>25/03/09 23:27:55</td>   <td>18905</td> <td>&nbsp;</td><td title="&lt;&lt;Testbase.close()[pri:0, instance:testlayer.HomePagetest@243c4f91]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
+<tr bgcolor="9bbd76">  <td>25/03/09 23:27:55</td>   <td>18895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Testbase.closed()[pri:0, instance:testlayer.HomePagetest@243c4f91]">&lt;&lt;closed</td> 
+<td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
+<tr bgcolor="9bbd76">  <td>25/03/09 23:27:32</td>   <td>-3297</td> <td>&nbsp;</td><td title="&gt;&gt;Testbase.setup()[pri:0, instance:testlayer.HomePagetest@243c4f91]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
+<tr bgcolor="9bbd76">  <td>25/03/09 23:27:32</td>   <td>-3169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Testbase.start()[pri:0, instance:testlayer.HomePagetest@243c4f91]">&gt;&gt;start</td> 
+<td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
 </table>
